# space-invaders-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  enum_style_cleanup.cpp  format.sh  main.cpp  make.sh  workflow.md
include/: aliens.hpp  block.hpp  buffer.h  button.hpp  game.h  game.hpp  lasers.hpp  mystery_ship.hpp  obstacle.hpp  shader.h  spaceship.hpp  sprite.h  sprite_animation.h  texture.h  window.h
space_invaders/: CMakeLists.txt
space_invaders/app/: main.cpp
space_invaders/include/: aliens.hpp  block.hpp  game.hpp  lasers.hpp  mystery_ship.hpp  obstacle.hpp  spaceship.hpp
space_invaders/si_lib/aliens/: aliens.cpp  aliens.hpp  mystery_ship.cpp  mystery_ship.hpp
space_invaders/si_lib/game/: game.cpp  game.hpp
space_invaders/si_lib/obstacles/: block.cpp  obstacle.cpp  obstacle.hpp
space_invaders/si_lib/ship/: lasers.cpp  lasers.hpp  spaceship.cpp  spaceship.hpp
space_invaders/si_lib/ui/: ui.cpp  ui.hpp
space_invaders/src/: aliens.cpp  block.cpp  game.cpp  lasers.cpp  main.cpp  mystery_ship.cpp  obstacle.cpp  spaceship.cpp
src/: CmakeLists.txt  aliens.cpp  block.cpp  buffer.cpp  button.cpp  game.cpp  lasers.cpp  main.cpp  mystery_ship.cpp  obstacle.cpp  shader.cpp  spaceship.cpp  sprite.cpp  texture.cpp  window.cpp
src/include/: buffer.h  shader.h  sprite.h  window.h
